# rust-cql

./: .gitignore  Cargo.toml  Makefile  README.md  chan.rs  cql.rs  pkg.rs
examples/: hello.rs
src/: cql_client.rc  cql_client.rs  lib.rs
