[package]

name = "cql"
version = "0.0.2"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]
description = "Apache Cassandra client library"

homepage = "https://github.com/yjh0502/rust-cql"
repository = "https://github.com/yjh0502/rust-cql"
keywords = ["cql", "cassandra"]

license = "MIT"

[dependencies]
num = "*"
byteorder = "*"

[profile.bench]
debug = true
