[package]

name = "cql"
version = "0.0.3"
authors = ["Jihyun Yu <yjh0502@gmail.com>"]
description = "Apache Cassandra client library"

homepage = "https://github.com/yjh0502/rust-cql"
repository = "https://github.com/yjh0502/rust-cql"
keywords = ["cql", "cassandra"]

license = "MIT"

[dependencies]
byteorder = "1.2"
log = "0.4"

[profile.bench]
debug = true
